Clean up logging and set file logging to JSON

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -60,8 +60,8 @@ jobs:
             file: ${{ matrix.file }}
             platforms: linux/amd64,linux/arm64
             push: true
-            tags: ${{ id.meta.outputs.tags }}
-            labels: ${{ id.meta.outputs.labels }}
+            tags: ${{ steps.meta.outputs.tags }}
+            labels: ${{ steps.meta.outputs.labels }}
             cache-from: type=gha,scope=${{ matrix.image }}
             cache-to: type=gha,mode=max,scope=${{ matrix.image }}
 
