--- a/.github/workflows/dev-deploy-2.yml
+++ b/.github/workflows/dev-deploy-2.yml
@@ -127,7 +127,7 @@ jobs:
               docker exec u4i-prod-flask tar -cf - -C /code/u4i/src/gen logged_in.js | tar -xf - -C ~/static;
 
               echo "Adding mock data for development..."
-              docker exec u4i-dev-flask bash -c ". /code/venv/bin/activate && cd /code/u4i && flask addmock all";
+              docker exec u4i-dev-flask bash -c ". /code/venv/bin/activate && cd /code/u4i && flask managedb clear && flask addmock all";
 
               echo "Cleaning up docker login files..."
               rm -f ~/.docker/config.json
