--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,4 +33,4 @@ jobs:
           node-version: "20"
 
       - name: Verify JavaScript with ESLint
-        run: npx eslint frontend/** --no-config-lookup
+        run: npx eslint "frontend/**/*.js" --no-config-lookup --ignore-pattern "node_modules"
