--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -121,6 +121,18 @@ jobs:
           python3.11 -m pip install --upgrade pip;
           pip install -r requirements/requirements-test.txt;
 
+      - name: Setup Node.js
+        uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238 # v6.2.0
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: 'frontend/package-lock.json'
+
+      - name: Install frontend dependencies and build
+        run: |
+          bash frontend/setup-vendor.sh
+          cd frontend && npm ci && npx vite build
+
       - name: Run tests
         env:
           DATABASE_URL_TEST: postgresql://postgres:postgres@localhost:${{ job.services.postgres.ports['5432'] }}/postgres
