Test dev deployments

--- a/.github/workflows/dev-build-and-deploy.yml
+++ b/.github/workflows/dev-build-and-deploy.yml
@@ -7,6 +7,8 @@ on:
             - main
         types:
             - closed
+            - synchronize # TODO: REMOVE
+            - opened # TODO: REMOVE
 
 jobs:
     build-dev:
